--- a/Courses/appsettings.json
+++ b/Courses/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-R5P03I4\\SQL2024; Database=Courses; User ID = sa; password = mohamed; Trust Server Certificate=True;"
+    "DefaultConnection": "Server=DESKTOP-R5P03I4\\SQL2024; Database=Courses; User ID = sa; password = *******; Trust Server Certificate=True;"
   },
 
   "Jwt": {
